--- a/index.html
+++ b/index.html
@@ -535,22 +535,17 @@ body {
             <div class="author">Posted by Admin</div>
             <div class="time">
                 <i class="fa fa-info-circle"alt="Clock icon"></i>
-                <span>Posted on: November 22, 2024</span>
+                <span>Posted on: November 3, 2024</span>
             </div>
         </div>
 
         <!-- Blog Image -->
-        <img src="Laugh Pills3.jpg" alt="Blog Image" class="blog-image">
+        <img src="Image3.jpg" alt="Blog Image" class="blog-image">
 
         <!-- Excerpt of Blog Post -->
         <div class="blog-excerpt">
-            <p>NIGERIA 🇳🇬🇳🇬
-ALWAYS REAMIN OURS
-
-HAPPY INDEPENDENCE DAY
-
-2NIGERIA</p>
-            <a href="#" class="read-more">View post</a>
+            <p>No be lie 💔🤣😅
+            <a href="https://www.facebook.com/100093836702966/posts/438246909313196/?mibextid=rS40aB7S9Ucbxw6v" class="read-more">View post</a>
             
         </div>
     </div>
