--- a/index.html
+++ b/index.html
@@ -600,8 +600,8 @@ Don't miss out on any of memes 🤣🥰
    </p>
      <div class="pagination">
     <a href="#">&laquo;</a>
-    <a href="#">1</a>
-    <a href="#" class="active">2</a>
+    <a href="index.html" class="active">1</a>
+    <a href="blog2.html">2</a>
     <a href="#">3</a>
     <a href="#">4</a>
     <a href="#">5</a>
