--- a/blog2.html
+++ b/blog2.html
@@ -403,7 +403,7 @@ body {
     <header class="header">
         <!-- Left side: Logo -->
         <div class="logo">
-            <img src="Picture.jpg" alt="Logo" class="logo-img">
+            <img src="Image.jpg" alt="Logo" class="logo-img">
             <p><span style="color: orange;">LAUGH </span>PILLS</p>
         </div>
 
@@ -459,7 +459,7 @@ Na you know why you no go be chosen 🙂</p>
         </div>
 
         <!-- Blog Image -->
-        <img src="iage5.jpg" alt="Blog Image" class="blog-image">
+        <img src="inage5.jpg" alt="Blog Image" class="blog-image">
 
         <!-- Excerpt of Blog Post -->
         <div class="blog-excerpt">
