--- a/blog2.html
+++ b/blog2.html
@@ -403,7 +403,7 @@ body {
     <header class="header">
         <!-- Left side: Logo -->
         <div class="logo">
-            <img src="Image.jpg" alt="Logo" class="logo-img">
+            <img src="Image2.jpg" class="logo-img">
             <p><span style="color: orange;">LAUGH </span>PILLS</p>
         </div>
 
