--- a/blog2.html
+++ b/blog2.html
@@ -459,7 +459,7 @@ Na you know why you no go be chosen 🙂</p>
         </div>
 
         <!-- Blog Image -->
-        <img src="inage5.jpg" alt="Blog Image" class="blog-image">
+        <img src="image5.jpg" alt="Blog Image" class="blog-image">
 
         <!-- Excerpt of Blog Post -->
         <div class="blog-excerpt">
